--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ jobs:
     runs-on: ubuntu-latest
     container: node:16
     steps: 
-      - run: echo "Sebastián Carrillo Cuevas"
+      - run: echo "Sebastian Carrillo Cuevas"
       - run: node --version
       - run: echo "Expediente 739460"
       - uses: actions/checkout@v3
